--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,17 @@
 }
 body{
   background-color: #f5f6fa;
-}
+} 
 .app{
   display: flex;
+  justify-content: space-evenly;
+  padding: 20px;
+}
+.app__left{
+  flex: 0.9;
+}
+@media ( max-width: 990px ){
+  .app{
+    flex-direction: column;
+  }
 }
