--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,13 @@
   margin-bottom: 20px;
   justify-content: space-between;
 }
+.app__header > h1 {
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+.app__dropdown{
+  background-color: white;
+}
 .app__stats{
   display: flex;
   justify-content: space-between;
@@ -21,6 +28,21 @@ body{
 }
 .app__left{
   flex: 0.9;
+}
+.app__right{
+  display: flex;
+  flex-direction: column;
+}
+.app__right .MuiCardContent-root{
+  flex-direction: column;
+  display: flex;
+  flex-grow: 1;
+}
+.app__graph{
+  flex-grow: 1;
+}
+.app__graphTitle{
+  margin-top: 20px;
 }
 @media ( max-width: 990px ){
   .app{
