--- a/src/InfoBox.css
+++ b/src/InfoBox.css
@@ -1,5 +1,6 @@
 .infoBox{
     flex: 1;
+    cursor: pointer;
 }
 .infoBox:not(:last-child){
     margin-right: 15px;
@@ -22,6 +23,6 @@
 .infoBox--red{
     border-color: red;
 }
-.infoBox__cases--green{
+.infoBox__cases--green {
     color: lightgreen !important;
 }
